--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="UTF-8">
-  <title>CodePen - Interactive particles text create with three.js </title>
+  <title>Future is now... </title>
   <link rel="stylesheet" href="./style.css">
 
 </head>
